--- a/backupconfs/extensions.conf
+++ b/backupconfs/extensions.conf
@@ -1,8 +1,29 @@
+; extensions.conf - the Asterisk dial plan
+;
+; Static extension configuration file, used by
+; the pbx_config module. This is where you configure all your
+; inbound and outbound calls in Asterisk.
+;
+; This configuration file is reloaded
+; - With the "dialplan reload" command in the CLI
+; - With the "reload" command (that reloads everything) in the CLI
 
+;
+; The "General" category is for certain variables.
+;
 [general]
-
+;
+; If static is set to no, or omitted, then the pbx_config will rewrite
+; this file when extensions are modified.  Remember that all comments
+; made in the file will be lost when that happens.
+;
+; XXX Not yet implemented XXX
+;
 static=yes
-
+;
+; if static=yes and writeprotect=no, you can save dialplan by
+; CLI command "dialplan save" too
+;
 writeprotect=no
 ;
 ; If autofallthrough is set, then if an extension runs out of
@@ -839,11 +860,3 @@ exten => _X.,n,Return()
 ; "core show functions" will list all dialplan functions
 ; "core show function <COMMAND>" will show you more information about
 ; one function. Remember that function names are UPPER CASE.
-
-
-[internal_users]
-exten => 6000,1,Answer()
-exten => 6000,2,Playback(hello-world)
-exten => 6000,3,Hangup()
-
-;exten => 6002,1,Dial(SIP/phone-2,20)
