--- a/simpledialplan/answer_playback_say_extensions.conf
+++ b/simpledialplan/answer_playback_say_extensions.conf
@@ -1,8 +1,8 @@
 [internal_users]
-exten => 6000,1,Answer()
-exten => 6000,2,Verbose("---------------- Tring Tring -------")
-exten => 6000,3,Wait(1)
-exten => 6000,4,Playback(hello-world)
+exten => 6000,1,Answer();
+exten => 6000,2,Verbose("---------------- Tring Tring -------");
+exten => 6000,3,Wait(1);
+exten => 6000,4,Playback(hello-world);
 exten => 6000,5,Hangup()
 
 exten => 6001,1,Dial(SIP/phone-2,20)
