--- a/simpledialplan/noopn_extensions.conf
+++ b/simpledialplan/noopn_extensions.conf
@@ -5,3 +5,24 @@ exten=>6123,n,Verbose(2,The unique id is ${UNIQUEID})
 ; output
 ;  == The channel name is PJSIP/7000-00000020
 ;  == The unique id is 1596334683.57
+
+exten=>6124,1,Verbose(2,The channel name is ${CHANNEL})
+        same => n,Verbose(2,The unique id is ${UNIQUEID})
+        same => n,Verbose(2,The caller id is ${CALLERID(all)})
+        same => n,Verbose(2,The datetime is ${DATETIME})
+        same => n,Verbose(2,The timestamp is ${TIMESTAMP})
+        same => n,Verbose(2,The context is ${CONTEXT})
+        same => n,Verbose(2,The SYSTEMNAME is ${SYSTEMNAME})
+        same => n,Verbose(2,The PRIORITY is ${PRIORITY})
+        same => n,Verbose(2,The CHANNEL is ${CHANNEL})
+
+;  == The channel name is PJSIP/7000-00000041
+;  == The unique id is 1596367234.110
+;  == The caller id is "" <7000>
+;  == The datetime is
+;  == The timestamp is
+;  == The context is internal_users
+;  == The SYSTEMNAME is
+;  == The PRIORITY is 8
+;  == The CHANNEL is PJSIP/7000-00000041
+
