--- a/voicemail/dial_voicemail_extensions.conf
+++ b/voicemail/dial_voicemail_extensions.conf
@@ -1,4 +1,7 @@
 [internal_users]
+exten => 5002,1,VoiceMail(8000/internal_users,u)
+exten => 5002,2,Verbose("-------------- Voicemail 8000  -------")
+
 exten => 6002,1,Dial(${GLOBAL(OPERATOR)},30)
    same => n,Voicemail(operator@default,${IF($[${DIALSTATUS} = BUSY]?b:u)})
    same => n,Hangup()
