--- a/webrtc/sip.conf
+++ b/webrtc/sip.conf
@@ -31,7 +31,7 @@
    websocket_enabled = true
    ;websocket_write_timeout = 100
 
-   transport=udp,tcp,wss
+   transport=tcp,udp,ws,wss
    srvlookup=yes
 
    use_q850_reason = yes ; Default "no"
@@ -57,9 +57,10 @@
    ;
    ; -------------------------- SIP DEBUGGING ---------------------------------------------------
 
-   sipdebug = no
+   sipdebug = yes
+    icesupport = yes
 
-;     ------------------------- TLS -------------------------------------------
+;  ------------------------- TLS -------------------------------------------
    tlsbindport=5061
    tlscertfile=/etc/asterisk/keys/asterisk.pem
    tlsprivatekey=/etc/asterisk/keys/asterisk.key
@@ -71,13 +72,15 @@
 
 ; --------------------------video ----------------------------------
    videosupport = yes
-   allow=h263
    allow=h263p
    allow=ulaw
    allow=g729
    allow=h264
    allow=gsm
    allow=alaw
+   allow=vp8
+   allow=vp9
+
 [authentication]
 [basic-options](!)                ; a template
        dtmfmode=rfc2833
