--- a/webrtc/users.conf
+++ b/webrtc/users.conf
@@ -6,12 +6,12 @@
 ;!
 
 [general]
-   fullname = New User
+   ;   fullname = New User
    userbase = 6000
-   hasvoicemail = yes
+   ;hasvoicemail = yes
    vmsecret = 1234
    hassip = yes
-   hasiax = yes
+   ;hasiax = yes
    ;hash323 = yes
    hasmanager = no
    ;managerread = system,call,log,verbose,command,agent,user,config
@@ -33,6 +33,17 @@
    callgroup = 1
    pickupgroup = 1
    ;nat = no
+   videosupport=yes
+
+[authentication]
+;
+; DTLS-SRTP CONFIGURATION
+;
+dtlsenable = yes                   ; Enable or disable DTLS-SRTP support
+dtlsverify = no                   ; Verify that provided peer certificate and fingerprint are valid
+dtlscertfile=/etc/asterisk/keys/asterisk.pem                ; Path to certificate file to present
+dtlsprivatekey=/etc/asterisk/keys/asterisk.pem              ; Path to private key for certificate file
+dtlssetup = actpass
 
 ;[6000]
    ;fullname = Joe User
@@ -81,6 +92,7 @@
    fullname = test
    registersip = no
    host = dynamic
+   context=public
    callgroup = 1
    mailbox = 6001
    call-limit = 100
@@ -116,54 +128,52 @@
 
 
 [1060]
-   type=friend
-   username=1060
-   host=dynamic
-   secret=password
-   encryption=yes
-   avpf=yes
-   icesupport=yes
-   context=public
-   directmedia=no ; Asterisk will relay media for this peer
-   transport=tcp,udp,ws,wss ; Asterisk will allow this peer to register on UDP or WebSockets
-   force_avp=yes ; Force Asterisk to use avp. Introduced in Asterisk 11.11
-   dtlsenable=yes ; Tell Asterisk to enable DTLS for this peer
-   dtlsverify=fingerprint ; Tell Asterisk to verify DTLS fingerprint
-   dtlscertfile=/etc/asterisk/keys/asterisk.pem
-   dtlssetup=actpass ; Tell Asterisk to use actpass SDP parameter when setting up DTLS
-   rtcp_mux=yes ; Tell Asterisk to do RTCP mux
-   allow=h263             ; H.263 is our video codec
-   allow=h263p             ; H.263p is the enhanced video codec
-   allow=ulaw
-   allow=g729
-   allow=h264
-   allow=gsm
-   allow=alaw
+    type=friend
+    username=1060
+    host=dynamic
+    context=public
+    secret=password
+    encryption=yes
+    avpf=yes
+    icesupport=no
+    context=public
+    directmedia=yes
+    transport=udp,ws,wss
+    force_avp=yes
+    dtlsenable=yes
+    dtlsverify=no
+    dtlscertfile=/etc/asterisk/keys/asterisk.pem
+    dtlsprivatekey=/etc/asterisk/keys/asterisk.pem
+    dtlssetup=actpass
+    rtcp_mux=yes
+    allow=opus,g722,ulaw,vp9,vp8,h264
+;   allow=h263             ; H.263 is our video codec
+;   allow=h263p             ; H.263p is the enhanced video codec
+;   allow=ulaw
+;   allow=g729
+;   allow=h264
+;   allow=gsm
+;   allow=alaw
 
 [1061]
-   type=friend
-   username=1061 ; The Auth user for SIP.js
-   host=dynamic ; Allows any host to register
-   secret=password ; The SIP Password for SIP.js
-   encryption=yes ; Tell Asterisk to use encryption for this peer
-   avpf=yes ; Tell Asterisk to use AVPF for this peer
-   icesupport=yes ; Tell Asterisk to use ICE for this peer
-   context=default ; Tell Asterisk which context to use when this peer is dialing
-   directmedia=no ; Asterisk will relay media for this peer
-   transport=udp,ws,wss ; Asterisk will allow this peer to register on UDP or WebSockets
-   force_avp=yes ; Force Asterisk to use avp. Introduced in Asterisk 11.11
-   dtlsenable=yes ; Tell Asterisk to enable DTLS for this peer
-   dtlsverify=fingerprint ; Tell Asterisk to verify DTLS fingerprint
-   dtlscertfile=/etc/asterisk/keys/asterisk.pem ; Tell Asterisk where your DTLS cert file is
-   dtlssetup=actpass ; Tell Asterisk to use actpass SDP parameter when setting up DTLS
-   rtcp_mux=yes ; Tell Asterisk to do RTCP mux
-   allow=h263             ; H.263 is our video codec
-   allow=h263p             ; H.263p is the enhanced video codec
-   allow=ulaw
-   allow=g729
-   allow=h264
-   allow=gsm
-   allow=alaw
+    type=friend
+    username=1061
+    host=dynamic
+    secret=password
+    encryption=yes
+    avpf=yes
+    icesupport=no
+    context=default
+    directmedia=yes
+    transport=udp,ws,wss
+    force_avp=yes
+    dtlsenable=yes
+    dtlsverify=fingerprint
+    dtlscertfile=/etc/asterisk/keys/asterisk.pem
+    dtlssetup=actpass ; Tell Asterisk to use actpass SDP parameter when setting up DTLS
+    rtcp_mux=yes
+;    allow=alaw,ulaw,gsm,vp8,h264
+    allow=opus,g722,ulaw,vp9,vp8,h264
 
 [1062]
    type=friend
