--- a/webrtc/rtp.conf
+++ b/webrtc/rtp.conf
@@ -1,5 +1,8 @@
-[general]
-rtpstart=10000
-rtpend=20000
-icesupport=yes
-stunaddr=stun.l.google.com:19302
+;
+; RTP Configuration
+;
+[general];
+rtpstart=10000;
+rtpend=20000;
+icesupport=true;
+stunaddr=stun.l.google.com:19302;
