--- a/webrtc/extensions.conf
+++ b/webrtc/extensions.conf
@@ -84,4 +84,5 @@ include => from-internal
    same => n,Ringing()
    same => n,Verbose(2,${DATETIME} Public Context - channel name is ${CHANNEL})
    same => n,Dial(SIP/1061)
-   same => n,Hangup
+   same => n,Wait(10)
+   same => n,Hangup()
