--- a/webrtc/rtp.conf
+++ b/webrtc/rtp.conf
@@ -1,8 +1,7 @@
 ;
 ; RTP Configuration
 ;
-[general];
-rtpstart=10000;
-rtpend=20000;
-icesupport=true;
-stunaddr=stun.l.google.com:19302;
+[general]
+rtpstart=10000
+rtpend=20000
+icesupport=false
