--- a/webrtc/sip.conf
+++ b/webrtc/sip.conf
@@ -4,23 +4,23 @@
 [general]
    context=public
    allowguest=yes
+   realm=192.168.29.165
    ;match_auth_username=yes
-   allowoverlap=no
+   ;allowoverlap=no
    ;allowoverlap=dtmf
    ;allowtransfer=no
-   ;realm=mydomain.tld
    ;recordonfeature=automixmon
    ;recordofffeature=automixmon
 
-   udpbindaddr=0.0.0.0:5064
+   udpbindaddr=0.0.0.0:5060
    ; rtpbindaddr=0.0.0.0
 
    ;disallowed_methods = UPDATE
 
    tcpenable=yes
-   tcpbindaddr=0.0.0.0:5064
+   tcpbindaddr=0.0.0.0:5060
 
-   bindaddr=0.0.0.0:5064
+   bindaddr=0.0.0.0:5060
 
    tlsenable=yes
    tlsbindaddr=0.0.0.0:5061
@@ -32,6 +32,8 @@
    ;websocket_write_timeout = 100
 
    transport=tcp,udp,ws,wss
+   avpf=yes
+   ;nat=yes,force_rport
    srvlookup=yes
 
    use_q850_reason = yes ; Default "no"
@@ -58,7 +60,7 @@
    ; -------------------------- SIP DEBUGGING ---------------------------------------------------
 
    sipdebug = yes
-    icesupport = yes
+   icesupport = yes
 
 ;  ------------------------- TLS -------------------------------------------
    tlsbindport=5061
@@ -72,14 +74,7 @@
 
 ; --------------------------video ----------------------------------
    videosupport = yes
-   allow=h263p
-   allow=ulaw
-   allow=g729
-   allow=h264
-   allow=gsm
-   allow=alaw
-   allow=vp8
-   allow=vp9
+   allow=all
 
 [authentication]
 [basic-options](!)                ; a template
