--- a/webrtc_pjsip/http.conf
+++ b/webrtc_pjsip/http.conf
@@ -5,7 +5,7 @@
 	servername=Asterisk
 	enabled=yes
 	bindaddr=0.0.0.0
-	bindport=8088
+	bindport=8020
 	;prefix=asterisk
 	sessionlimit=1000
 	;session_inactivity=30000
@@ -14,16 +14,30 @@
     enable_status=yes
     allowed_origins=*
     tlsenable=yes
-    tlsbindaddr=0.0.0.0:8089
+    tlsbindaddr=0.0.0.0:8021
     tlscertfile=/etc/asterisk/keys/asterisk.pem
     tlsprivatekey=/etc/asterisk/keys/asterisk.key
-    tlscipher=ALL
 
+;
 ; Redirect one URI to another.  This is how you would set a
 ; default page.
 ;   Syntax: redirect=<from here> <to there>
+; For example, if you are using the Asterisk-gui,
+; it is convenient to enable the following redirect:
+;
 ;redirect = / /static/config/index.html
-
+;
+; HTTPS support. In addition to enabled=yes, you need to
+; explicitly enable tls, define the port to use,
+; and have a certificate somewhere.
+;tlsenable=yes          ; enable tls - default no.
+;tlsbindaddr=0.0.0.0:8089    ; address and port to bind to - default is bindaddr and port 8089.
+;
+;tlscertfile=</path/to/certificate.pem>  ; path to the certificate file (*.pem) only.
+;tlsprivatekey=</path/to/private.pem>    ; path to private key file (*.pem) only.
+; If no path is given for tlscertfile or tlsprivatekey, default is to look in current
+; directory. If no tlsprivatekey is given, default is to search tlscertfile for private key.
+;
 ; To produce a certificate you can e.g. use openssl. This places both the cert and
 ; private in same .pem file.
 ; openssl req -new -x509 -days 365 -nodes -out /tmp/foo.pem -keyout /tmp/foo.pem
