--- a/webrtc_pjsip/modules.conf
+++ b/webrtc_pjsip/modules.conf
@@ -12,27 +12,22 @@ noload => chan_alsa.so
 ;noload => chan_oss.so
 noload => chan_console.so
 
-; Webrtc
-load => res_http_websocket
-
 ;  Resources --
-load => chan_sip.so
+load => chan_pjsip.so
+noload => chan_sip.so
+load => res_ari_bridges.so
+load => res_pjsip.so
+load => res_pjsip_pubsub.so
+load => res_pjsip_session.so
+load => chan_pjsip.so
+load => res_pjsip_exten_state.so
+load => res_pjsip_log_forwarder.so
+load => res_pjsip_sdp_rtp.so
+
 load => res_rtp_asterisk.so
 load => res_rtp_multicast.so
 load => res_srtp.so
-load => res_ari_bridges.so
-load => res_crypto.so
 
-noload => res_pjsip.so
-noload => res_pjsip_pubsub.so
-noload => res_pjsip_session.so
-noload => chan_pjsip.so
-noload => res_pjsip_exten_state.so
-noload => res_pjsip_log_forwarder.so
-noload => res_pjsip_sdp_rtp.so
-noload => res_pjsip_transport_websocket
-
-; heplify and homer for voip monitoring
 noload => res_hep.so
 noload => res_hep_pjsip.so
 noload => res_hep_rtcp.so
@@ -80,9 +75,8 @@ load => res_ari_sounds.so
 ;  Codecs --
 
 load => codec_opus.so
-load => res_format_attr_opus.so
 noload => codec_g726.so
-load => codec_alaw.so
+noload => codec_alaw.so
 
 
 ;  Formats --
