--- a/webrtc_pjsip/users.conf
+++ b/webrtc_pjsip/users.conf
@@ -6,12 +6,12 @@
 ;!
 
 [general]
-   ;   fullname = New User
+   fullname = New User
    userbase = 6000
-   ;hasvoicemail = yes
+   hasvoicemail = yes
    vmsecret = 1234
    hassip = yes
-   ;hasiax = yes
+   hasiax = yes
    ;hash323 = yes
    hasmanager = no
    ;managerread = system,call,log,verbose,command,agent,user,config
@@ -32,33 +32,7 @@
    callreturn = yes
    callgroup = 1
    pickupgroup = 1
-   nat=yes,force_rport
-   videosupport=yes
-
-[authentication]
-;
-; DTLS-SRTP CONFIGURATION
-;
-dtlsenable = yes                   ; Enable or disable DTLS-SRTP support
-dtlsverify = no                   ; Verify that provided peer certificate and fingerprint are valid
-dtlscertfile=/etc/asterisk/keys/asterisk.pem                ; Path to certificate file to present
-dtlsprivatekey=/etc/asterisk/keys/asterisk.pem              ; Path to private key for certificate file
-dtlssetup = actpass
-
-[1000]
-   type=friend
-   username=1000
-   host=dynamic
-   secret=password
-   context=default
-
-[1001]
-   type=friend
-   username=1001
-   host=dynamic
-   secret=password
-   context=default
-
+   ;nat = no
 
 ;[6000]
    ;fullname = Joe User
@@ -81,11 +55,32 @@ dtlssetup = actpass
    ;linenumber = 1
    ;cid_number = 6000
 
+[trunk_1]
+   host = 223.224.108.51
+   username =
+   secret =
+   outboundproxy = 10.5.251.121
+   trunkname = trunk \; GUI metadata \; GUI metadata
+   context = DID_trunk_1
+   hasexten = no
+   hasiax = no
+   hassip = yes
+   registeriax = no
+   registersip = no
+   trunkstyle = voip
+   ;qualify=no
+   insecure = yes
+   ;disallow = all
+   allow = ulaw,alaw,gsm,g726
+   qualify=yes ; Qualification: Flag to enable HeartBeat from Asterisk to SBC
+   qualifyfreq=30 ; Qualification: How often to check for the host to be up in seconds
+   qualifygap=60
+   canreinvite = no
+
 [6001]
    fullname = test
    registersip = no
    host = dynamic
-   context=public
    callgroup = 1
    mailbox = 6001
    call-limit = 100
@@ -124,43 +119,46 @@ dtlssetup = actpass
     type=friend
     username=1060
     host=dynamic
-    context=public
     secret=password
     encryption=yes
     avpf=yes
-    nat=yes,force_rport
     icesupport=yes
+    context=public
     directmedia=no
-    transport=ws,wss
+    transport=tcp,udp,ws,wss
     force_avp=yes
     dtlsenable=yes
-    dtlsverify=no
+    dtlsverify=fingerprint
     dtlscertfile=/etc/asterisk/keys/asterisk.pem
-    dtlsprivatekey=/etc/asterisk/keys/asterisk.pem
     dtlssetup=actpass
-    ; rtcp_mux=yes
-    allow=opus,g722,ulaw,vp9,vp8,h264
+    rtcp_mux=yes
+    allow=alaw,ulaw,gsm,vp8,h264
+;   allow=h263             ; H.263 is our video codec
+;   allow=h263p             ; H.263p is the enhanced video codec
+;   allow=ulaw
+;   allow=g729
+;   allow=h264
+;   allow=gsm
+;   allow=alaw
 
 [1061]
     type=friend
     username=1061
     host=dynamic
-    context=public
     secret=password
     encryption=yes
     avpf=yes
-    nat=yes,force_rport
     icesupport=yes
+    context=default
     directmedia=no
     transport=udp,ws,wss
     force_avp=yes
     dtlsenable=yes
-    dtlsverify=no
+    dtlsverify=fingerprint
     dtlscertfile=/etc/asterisk/keys/asterisk.pem
-    dtlsprivatekey=/etc/asterisk/keys/asterisk.pem
-    dtlssetup=actpass
-   ; rtcp_mux=yes
-    allow=opus,g722,ulaw,vp9,vp8,h264
+    dtlssetup=actpass ; Tell Asterisk to use actpass SDP parameter when setting up DTLS
+    rtcp_mux=yes
+    allow=alaw,ulaw,gsm,vp8,h264
 
 [1062]
    type=friend
